fix sidebar overflowing

--- a/src/work-allocation-2/components/case-manager-filter/case-manager-filter.component.scss
+++ b/src/work-allocation-2/components/case-manager-filter/case-manager-filter.component.scss
@@ -9,7 +9,7 @@
 }
 
 
-.hmcts-filter-layout__filter {
+.cases-container .hmcts-filter-layout__filter {
   float: none;
   margin-right: 0;
   min-width: inherit;
